create thebasic structure for the sidebar

--- a/index.html
+++ b/index.html
@@ -6,6 +6,44 @@
   </head>
   <body>
     <!--sidebar-->
+    <div id="sidebar">
+      <h3>Projects</h3>
+      <p><strong>My work thus far...</strong></p>
+      <ul>
+        <li><a href="https://github.com/AndrewDevlin/wiki-mockup">wiki-mockup</a></li>
+        <p></p>
+        <li><a href="https://github.com/AndrewDevlin/vacation">vacation</a></li>
+        <p></p>
+        <li><a href="https://github.com/AndrewDevlin/first-week">first-week</a></li>
+        <p></p>
+        <li><a href="https://github.com/AndrewDevlin/shelter">shelter</a></li>
+        <p></p>
+        <li><a href="https://github.com/AndrewDevlin/decorator">decorator</a></li>
+        <p></p>
+        <li><a href="https://github.com/AndrewDevlin/blog">blog</a></li>
+        <p></p>
+        <li><a href="https://github.com/AndrewDevlin/band">band</a></li>
+        <p></p>
+        <li><a href="https://github.com/AndrewDevlin/boring-lecture">boring-lecture</a></li>
+        <p></p>
+        <li><a href="https://github.com/AndrewDevlin/cupcake-shop">cupcake-shop</a></li>
+        <p></p>
+        <li><a href="https://github.com/AndrewDevlin/resort-website">resort-website</a></li>
+        <p></p>
+        <li><a href="https://github.com/AndrewDevlin/pet-webpage">pet-webpage</a></li>
+        <p></p>
+        <li><a href="https://github.com/AndrewDevlin/natural-skin-care">natural-skin-care</a></li>
+        <p></p>
+        <li><a href="https://github.com/AndrewDevlin/my-first-webpage">my-first-webpage</a></li>
+        <p></p>
+        <li><a href="https://github.com/AndrewDevlin/cookie-recipe">cookie-recipe</a></li>
+        <p></p>
+        <li><a href="https://github.com/AndrewDevlin/goodbye">goodbye</a></li>
+        <p></p>
+        <li><a href="https://github.com/AndrewDevlin/hello-world">hello-world</a></li>
+        <p></p>
+      </ul>
+    </div>
     <!--header-->
     <!--about-->
   </body>
