--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <h1>Andrew Devlin</h1>
           </div>
           <div class="column">
-            
+
           </div>
         </div>
       </div>
@@ -110,8 +110,17 @@
     <!--about-->
     <div id="about">
       <h3>About Me</h3>
-      <p><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</em> Aliquam mi massa, condimentum quis auctor et, fermentum sed eros. Maecenas semper ipsum eleifend purus malesuada, in hendrerit nisl porttitor. In sed tellus orci. Vivamus eu leo id tortor consectetur gravida. Ut sagittis at orci a lacinia. Praesent sit amet velit congue, lobortis dui at, convallis metus. In feugiat sagittis lorem, quis tempus magna rutrum nec. Phasellus tincidunt tincidunt efficitur. Donec vel massa lacus. Suspendisse convallis porta diam, sit amet condimentum ipsum fermentum ac. Sed sit amet tortor ullamcorper, condimentum elit in, consectetur libero. Sed ullamcorper, eros at volutpat commodo, est eros eleifend diam, eu imperdiet nibh tellus eget enim. Aenean augue lectus, iaculis sit amet est eget, elementum lobortis augue. Quisque vel urna sem. Nunc nibh metus, hendrerit eu dignissim non, tempus sed orci. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
-      <p><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</em> Aliquam mi massa, condimentum quis auctor et, fermentum sed eros. Maecenas semper ipsum eleifend purus malesuada, in hendrerit nisl porttitor. In sed tellus orci. Vivamus eu leo id tortor consectetur gravida. Ut sagittis at orci a lacinia. Praesent sit amet velit congue, lobortis dui at, convallis metus. In feugiat sagittis lorem, quis tempus magna rutrum nec. Phasellus tincidunt tincidunt efficitur. Donec vel massa lacus. Suspendisse convallis porta diam, sit amet condimentum ipsum fermentum ac. Sed sit amet tortor ullamcorper, condimentum elit in, consectetur libero. Sed ullamcorper, eros at volutpat commodo, est eros eleifend diam, eu imperdiet nibh tellus eget enim. Aenean augue lectus, iaculis sit amet est eget, elementum lobortis augue. Quisque vel urna sem. Nunc nibh metus, hendrerit eu dignissim non, tempus sed orci. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+      <p>
+      For most of my life I have worked in <em>plumbing, sales and customer service.</em>I was educated in the Virginia plumbing apprenticeship system. During which I received certifications in various areas, such as:
+      <ul>
+        <li>customer service</li>
+        <li>service and installation of pumps</li>
+        <li>potable water purification and conditioning</li>
+        <li>waist water treatment</li>
+        <li>electrical wiring</li>
+      </ul>
+      Having mastered my trade, I went looking for a new challenge. My love of logic and trouble shooting led me to computer programming.</p>
+      <p>My intrests include <em>logic, film, litterature and music.</em> I also like to ballance my recreation with physical activities such as hiking, fishing, and lifting weights.</p>
     </div>
   </body>
 </html>
